hub/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub-ui
  namespace: hub
spec:
  selector:
    app: hub-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
