hub/52-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hub
  namespace: hub
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-white-fm
  hostnames:
    - hub.white.fm
  rules:
    - backendRefs:
        - name: hub-ui
          port: 80
