hub/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hub-internal
  namespace: hub
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - hub.internal.white.fm
  rules:
    - backendRefs:
        - name: hub-ui
          port: 80
